# cvh

./: CHANGELOG.md  CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: ci-compare-toggle.yml  ci.yml
benchmark/: baseline_filter_quick.csv  core_ops_benchmark.cpp  filter_quick_fallback.csv  filter_quick_optimized.csv  gate_policy.json  imgproc_filter_benchmark.cpp  readme.md
cmake/: opencv_header_onlyConfig.cmake.in
doc/: design.md  dual-mode-gap-tracker.md  filter-acceleration-execution-plan-2026-04-15.md  filter-acceleration-plan.md  header-only-opencv-plan.md  mat-basic-op-acceleration-plan.md  mat-channel-plan-a.md  mat-contract-v1.md  matexpr-scalar-compare-plan.md  opencv-core-interface-compat-test-plan.md  phase0-execution-plan.md  phase1-execution-plan.md  release.md  src-core-migration-tracker.md  transpose-x86-todo-2026-04-19.md
example/: highgui_imshow.cpp
include/cvh/: cvh.h
include/cvh/core/: basic_op.h  define.h  mat.h  mat.inl.h  readme.md  system.h
include/cvh/core/detail/: dispatch_control.h  xsimd_kernel_utils.h
include/cvh/detail/: config.h
include/cvh/highgui/: highgui.hpp
include/cvh/imgproc/detail/: common.h
scripts/: check_core_benchmark_regression.py  check_imgproc_filter_benchmark_regression.py  ci_compare_log_only.sh  ci_core_basic.sh  ci_full_all.sh  ci_lite_all.sh  ci_smoke.sh  report_imgproc_filter_speedup.py  sync_opencv_core_channel_cases.py  verify_opencv_core_channel_cases.py
src/core/: basic_op.cpp  basic_op_scalar.cpp  mat.cpp  mat_convert.cpp  mat_expr.cpp  mat_gemm.cpp  memory_utils.cpp  system.cpp  utils.cpp
src/core/kernel/: binary_kernel_xsimd.cpp  binary_kernel_xsimd.h  transpose_kernel.cpp  transpose_kernel.h
src/highgui/: display_fb.cpp  display_fb.h  display_x11.cpp  display_x11.h  highgui.cpp
src/imgproc/: resize_backend.cpp
test/: failing-tests.md  readme.md
test/core/: binary_op_contract_test.cpp  core_ops_test.cpp  mat_channel_contract_test.cpp  mat_contract_test.cpp  mat_expr_scalar_compare_test.cpp  mat_opencv_compat_test.cpp  mat_scalar_ops_test.cpp  mat_shape_display_test.cpp  mat_submat_test.cpp  mat_test.cpp  mat_upstream_channel_port_test.cpp  readme.md  system_test.cpp
test/highgui/: highgui_contract_test.cpp
test/smoke/: cvh_include_only_smoke.cpp  cvh_mode_smoke.cpp  cvh_resize_dispatch_smoke.cpp
test/upstream/opencv/core/: channel_manifest.json  readme.md
test/upstream/opencv/core/d719c6d/: test_arithm.channel_cases.cpp  test_mat.channel_cases.cpp  test_operations.channel_cases.cpp
test/utils/: mat_load.cpp
